auto publishing updates to notebooks

--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a38829eb",
+   "id": "53309acf",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8776b9ff",
+   "id": "71ac7e48",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "648a2e33",
+   "id": "c6e6b976",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91819369",
+   "id": "f0fe305f",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d869a917",
+   "id": "33eefde1",
    "metadata": {
     "hide-output": false
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fcec9ab",
+   "id": "3b5c521c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37911853",
+   "id": "8fab91a6",
    "metadata": {
     "hide-output": false
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed17e26f",
+   "id": "67f530c6",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "749f8f2a",
+   "id": "1f761475",
    "metadata": {
     "hide-output": false
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd37c63a",
+   "id": "43d863f4",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a013437",
+   "id": "658b2fb0",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95dd136b",
+   "id": "54bdc6a7",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cde89c8",
+   "id": "a94afe13",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "888bc2ef",
+   "id": "24f1f646",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef7620a0",
+   "id": "041737d5",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbf7d311",
+   "id": "c2dbff78",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b58f515f",
+   "id": "19fb033a",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d708b1c",
+   "id": "58e8cc28",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81eaf589",
+   "id": "10a2a61c",
    "metadata": {
     "hide-output": false
    },
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54d27300",
+   "id": "f341bc4e",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba0e3fe8",
+   "id": "525b84d4",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c98dda39",
+   "id": "df559a8c",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6123c5a",
+   "id": "fdef42bf",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd6a439e",
+   "id": "dcdaf9d0",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "429ee5c4",
+   "id": "5d334018",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e35b0cb",
+   "id": "26615a24",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10072b6f",
+   "id": "6cb11ed1",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebdc2f16",
+   "id": "ff05911b",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b37cad46",
+   "id": "81e403dd",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the arrays declared as static (compile-time constants) in order to help the compiler."
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e6afa6b",
+   "id": "4c6cc9b7",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0be368dc",
+   "id": "a88f47f2",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3819598",
+   "id": "9fa7ae56",
    "metadata": {
     "hide-output": false
    },
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a2d97b2",
+   "id": "752cbb07",
    "metadata": {},
    "source": [
     "We can now write a function that will use the `Arellano_Economy` class and the\n",
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "570c8c18",
+   "id": "bdee141e",
    "metadata": {
     "hide-output": false
    },
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1da6b1d",
+   "id": "c41f7b94",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f7ae9a0",
+   "id": "03418a11",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9293e51b",
+   "id": "0c4d4e1f",
    "metadata": {
     "hide-output": false
    },
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e039e83",
+   "id": "0cec457a",
    "metadata": {
     "hide-output": false
    },
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16711eec",
+   "id": "b15cff0b",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c637a03",
+   "id": "c9a6391a",
    "metadata": {
     "hide-output": false
    },
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16da101f",
+   "id": "433d63fd",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb96f0e4",
+   "id": "ffaeb0a4",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9ed9366",
+   "id": "9541f32a",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "661c3c97",
+   "id": "b8a023c6",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10123ecc",
+   "id": "13141799",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73f58642",
+   "id": "6d17d136",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of Arellano (2008)"
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27951804",
+   "id": "269e53c7",
    "metadata": {
     "hide-output": false
    },
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e3a5ff5",
+   "id": "995e7a9e",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58a9bd66",
+   "id": "72d6a51e",
    "metadata": {
     "hide-output": false
    },
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8265da4",
+   "id": "a58b1b3e",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad160c7c",
+   "id": "4213f7a4",
    "metadata": {
     "hide-output": false
    },
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24ff4630",
+   "id": "2b0570ca",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43f8447d",
+   "id": "06968dae",
    "metadata": {
     "hide-output": false
    },
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c3f35d3",
+   "id": "244f34c6",
    "metadata": {
     "hide-output": false
    },
@@ -1240,7 +1240,7 @@
   }
  ],
  "metadata": {
-  "date": 1694398321.5726933,
+  "date": 1694646184.326809,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
