--- a/opt_savings.ipynb
+++ b/opt_savings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "97b69aa9",
+   "id": "2551757a",
    "metadata": {},
    "source": [
     "# Optimal Savings"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b37ca0bc",
+   "id": "d58fccb6",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed098822",
+   "id": "92fa6911",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44799297",
+   "id": "fa9359ac",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3153e316",
+   "id": "9b095b0c",
    "metadata": {
     "hide-output": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93dd6990",
+   "id": "ce3d31d2",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9be37f27",
+   "id": "a39b7f5e",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04f1f647",
+   "id": "568ad0eb",
    "metadata": {},
    "source": [
     "Use 64 bit floats with JAX in order to match NumPy code\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0268d5d8",
+   "id": "c067235e",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66a35731",
+   "id": "16462afe",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b18640c",
+   "id": "c8754451",
    "metadata": {
     "hide-output": false
    },
@@ -168,72 +168,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2caa093d",
+   "id": "f90194a2",
    "metadata": {},
    "source": [
     "## Model primitives\n",
     "\n",
-    "Here’s a `namedtuple` definition for storing parameters and grids."
+    "First we define a model that stores parameters and grids"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93f9d832",
+   "id": "57172d38",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "Model = namedtuple('Model',\n",
-    "                    ('β', 'R', 'γ', 'w_grid', 'y_grid', 'Q'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "575c40ee",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "def create_consumption_model(R=1.01,                    # Gross interest rate\n",
+    "def create_consumption_model(R=1.01,                # Gross interest rate\n",
     "                             β=0.98,                    # Discount factor\n",
-    "                             γ=2.5,                     # CRRA parameter\n",
+    "                             γ=2,                       # CRRA parameter\n",
     "                             w_min=0.01,                # Min wealth\n",
     "                             w_max=5.0,                 # Max wealth\n",
     "                             w_size=150,                # Grid side\n",
     "                             ρ=0.9, ν=0.1, y_size=100): # Income parameters\n",
     "    \"\"\"\n",
-    "    A function that takes in parameters and returns an instance of Model that\n",
-    "    contains data for the optimal savings problem.\n",
-    "    \"\"\"\n",
-    "    w_grid = jnp.linspace(w_min, w_max, w_size)\n",
-    "    mc = qe.tauchen(n=y_size, rho=ρ, sigma=ν)\n",
-    "    y_grid, Q = jnp.exp(mc.state_values), mc.P\n",
-    "    return Model(β=β, R=R, γ=γ, w_grid=w_grid, y_grid=y_grid, Q=Q)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca836f4a",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "def create_consumption_model_jax(R=1.01,                # Gross interest rate\n",
-    "                             β=0.98,                    # Discount factor\n",
-    "                             γ=2.5,                     # CRRA parameter\n",
-    "                             w_min=0.01,                # Min wealth\n",
-    "                             w_max=5.0,                 # Max wealth\n",
-    "                             w_size=150,                # Grid side\n",
-    "                             ρ=0.9, ν=0.1, y_size=100): # Income parameters\n",
-    "    \"\"\"\n",
-    "    A function that takes in parameters and returns a JAX-compatible version of\n",
-    "    Model that contains data for the optimal savings problem.\n",
+    "    A function that takes in parameters and returns parameters and grids \n",
+    "    for the optimal savings problem.\n",
     "    \"\"\"\n",
     "    w_grid = jnp.linspace(w_min, w_max, w_size)\n",
     "    mc = qe.tauchen(n=y_size, rho=ρ, sigma=ν)\n",
@@ -246,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7911924c",
+   "id": "8cab95ea",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -255,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ead68ee",
+   "id": "29204f6d",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b09fb633",
+   "id": "5922c3b3",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -304,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a64dfdb2",
+   "id": "34088bf0",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7703d4a8",
+   "id": "398b9bb1",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42a07635",
+   "id": "d1d2b9f9",
    "metadata": {},
    "source": [
     "and the Bellman operator $ T $"
@@ -376,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ab98c7c",
+   "id": "34fd358c",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0af6dee2",
+   "id": "13dc7955",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -398,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d180a1f",
+   "id": "f29831b0",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e3e7c9f",
+   "id": "75f86a45",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -450,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23a67abb",
+   "id": "872d439e",
    "metadata": {
     "hide-output": false
    },
@@ -494,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7f0db4b",
+   "id": "33d45ee4",
    "metadata": {
     "hide-output": false
    },
@@ -518,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efcb87b1",
+   "id": "d0146184",
    "metadata": {},
    "source": [
     "## JIT compiled versions"
@@ -527,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3927b111",
+   "id": "df28257f",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ad8e224",
+   "id": "679bb54e",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -555,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9a3307f",
+   "id": "6eb7344e",
    "metadata": {
     "hide-output": false
    },
@@ -575,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21a98d4e",
+   "id": "cc9945e0",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fe9a4bd",
+   "id": "6c46331e",
    "metadata": {
     "hide-output": false
    },
@@ -623,25 +584,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b26d9ad7",
+   "id": "d522b595",
    "metadata": {},
    "source": [
     "## Plots\n",
     "\n",
-    "Create a JAX model for consumption, perform policy iteration, and plot the resulting optimal policy function."
+    "Create a model for consumption, perform policy iteration, and plot the resulting optimal policy function."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c611107",
+   "id": "99961750",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "fontsize = 12\n",
-    "model = create_consumption_model_jax()\n",
+    "model = create_consumption_model()\n",
     "# Unpack\n",
     "constants, sizes, arrays = model\n",
     "β, R, γ = constants\n",
@@ -652,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "496265e3",
+   "id": "fc3e66fb",
    "metadata": {
     "hide-output": false
    },
@@ -670,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdd9a3ff",
+   "id": "4a12b4a6",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -681,19 +642,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f26767d",
+   "id": "3b9a0259",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "model = create_consumption_model_jax()"
+    "model = create_consumption_model()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d794ca19",
+   "id": "861b86e3",
    "metadata": {
     "hide-output": false
    },
@@ -709,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bba34d6e",
+   "id": "ec6ab9d5",
    "metadata": {
     "hide-output": false
    },
@@ -725,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea727d75",
+   "id": "85dbd9e3",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b550ac5a",
+   "id": "72622b21",
    "metadata": {
     "hide-output": false
    },
@@ -759,13 +720,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18ed040c",
+   "id": "02b96273",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "model = create_consumption_model_jax()\n",
+    "model = create_consumption_model()\n",
     "σ_pi, pi_time = run_algorithm(policy_iteration, model)\n",
     "σ_vfi, vfi_time = run_algorithm(value_iteration, model, tol=1e-5)\n",
     "\n",
@@ -779,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f123273a",
+   "id": "0d1dc187",
    "metadata": {
     "hide-output": false
    },
@@ -797,7 +758,7 @@
   }
  ],
  "metadata": {
-  "date": 1694398322.146392,
+  "date": 1694646184.9218528,
   "filename": "opt_savings.md",
   "kernelspec": {
    "display_name": "Python",
